<resources>
    <string name="app_name">Madhuvan Foundation</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_item">First Item</string>
    <string name="madhuvan_foundation">Madhuvan Foundation</string>
    <string name="madhuvan_foundation_is_a_voluntary_organization_which_is_in_preliminary_stage_registered_under_the_society_registration_act_and_bombay_public_trust_ac_vision_enhancing_and_equipping_quality_of_life_of_different_segments_of_society_about_us_madhuvan_foundation_intends_to_serve_both_urban_rural_population_with_respect_to_eradication_of_poverty_through_provision_of_formal_and_non_formal_literacy_to_children_women_and_youth_and_promoting_awareness_about_health_and_hygiene_as_well_as_harnessing_sustainable_development_through_ecological_balance"><![CDATA[Madhuvan Foundation is a voluntary Organization which is in preliminary stage, registered under the Society registration Act and Bombay Public Trust Ac. Vision: Enhancing and Equipping Quality of Life of Different Segments of Society. About us: Madhuvan Foundation intends to serve both urban & rural Population with respect to eradication of poverty through provision of formal and non-formal literacy to children, women and youth and promoting awareness about health and hygiene as well as harnessing sustainable development through ecological balance.]]></string>
    <string name="call1">Madhuvan Foundation is a voluntary Organization which is in preliminary stage, registered under the Society registration Act and Bombay Public Trust Ac.</string>
    <string name="call2">Enhancing and Equipping Quality of Life of Different Segments of Society.</string>
    <string name="about_us">About us:</string>
    <string name="call3"><![CDATA[Madhuvan Foundation intends to serve both urban & rural Population with respect to eradication of poverty through provision of formal and non-formal literacy to children, women and youth and promoting awareness about health and hygiene as well as harnessing sustainable development through ecological balance.]]></string>
    <string name="vision">Vision:</string>
    <string name="call4">
        <a href="https://www.facebook.com/MadhuvanNGOAnand">click here</a> to visit our facebook page
    </string>
    <string name="menu_item">Menu Item</string>
    <string name="initiatives_section">Initiatives Section</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="fb_page">https://www.facebook.com/MadhuvanNGOAnand</string>
    <string name="pasti_ki_pathshala_with_raddi_ka_ruaab">\t\t\t“Pasti Ki Pathshala With Raddi Ka Ruaab”</string>
    <string name="our_madhuvan_foundation_has_instigated_a_project_named_pasti_ki_pathshala_with_raddi_ka_ruaab_this_is_governing_since_2014_to_promote_education_among_poor_children_education_is_the_only_wealth_which_cannot_be_robbed_it_builds_both_internal_and_outer_personality_and_character_strengthens_our_mind_and_augments_our_pool_of_knowledge_the_education_is_very_essential_for_eradicating_poverty_as_it_makes_people_more_productive_and_earn_a_better_living">Our Madhuvan Foundation has instigated a project named “Pasti Ki Pathshala With Raddi Ka Ruaab”. This is governing since 2014 to promote education among poor children. Education is the only wealth which cannot be robbed. It builds both internal and outer personality and character, strengthens our mind and augments our pool of knowledge. The education is very essential for eradicating poverty as it makes people more productive and earn a better living.</string>
    <string name="the_education_is_the_key_which_allows_people_to_open_up_the_world_of_opportunities_seek_better_job_and_ultimately_succeed_in_their_lives_its_main_aim_is_that_to_help_poor_children_who_get_difficulty_in_purchasing_books_and_other_things_for_education_who_are_associated_with_our_ngo_such_as_students_of_social_work_volunteers_supports_and_other_field_workers_go_in_the_field_and_collect_waste_papers_like_old_books_magazines_newspapers_from_the_local_people_schools_colleges_and_other_areas_covered_for_field_work_they_go_to_home_to_home_and_collect_waste_papers_whatever_waste_papers_are_collected_by_them_which_is_sold_by_the_madhuvan_foundation_and_got_money_from_selling_waste_papers_madhuvan_foundation_brings_note_books_from_the_money_of_selling_waste_papers_and_distribute_among_the_poor_children_in_primary_schools_as_per_the_need_and_requirement_it_has_very_positive_impact_on_education_of_children_and_helpful_to_enhancing_the_ratio_of_education_among_children_this_project_helps_to_increase_of_quality_of_education">The education is the key which allows people to open up the world of opportunities, seek better job, and ultimately succeed in their lives. Its main aim is that to help poor children who get difficulty in purchasing books and other things for education. Who are associated with our NGO such as students of social work, volunteers, supports and other field workers go in the field and collect waste papers like old books, magazines, newspapers from the local people, schools, colleges and other areas covered for field work. They go to home to home and collect waste papers. Whatever waste papers are collected by them, which is sold by the Madhuvan Foundation and got money from selling waste papers. Madhuvan Foundation brings note books from the money of selling waste papers and distribute among the poor children in primary schools as per the need and requirement. It has very positive impact on education of children and helpful to enhancing the ratio of education among children. This project helps to increase of quality of education.</string>
    <string name="t_t_one_day_one_rupees_educational_kit">\t\t“One Day One Rupees = Educational Kit”</string>
    <string name="call221">Our second initiative is “One Day One Rupees”. Our main object behind this initiative is to work for the society with their contribution. As per this project, we are taking one rupee per day as 365 day of a year from the donors. Our Madhuvan Foundation takes 365 rupees from those want to contribute our NGO for upliftment and betterment of the children and society. We work to provide an educational kit to children with this support to enhance educational level among children. We are using this contribution for doing work to develop society like as awareness programmes, organizing competition among students to increase creativity among them, community based programmes, educational programmes, rally on spreading awareness about social issues, students development activities, health checkup camps and so on. As per this concept we give children a whole educational kit with the all basic facilities like as bag, pen, pencil, eraser, sharpener, books and so on.</string>
    <string name="t_t_tgyandhara_a_way_of_promoting_education">\t\t\t\tGyandhara- A Way of Promoting Education</string>
    <string name="education_is_the_most_powerful_weapon_which_you_can_use_to_change_the_world_nelson_mandela">“Education is the most powerful weapon which you can use to change the world”- Nelson Mandela</string>
    <string name="gyandhara_a_way_of_promoting_education_is_working_to_prepare_children_for_a_world_that_not_only_places_a_high_value_on_educational_achievement_but_also_on_artistic_flair_social_awareness_independence_and_diversity_we_launched_this_project_is_dated_on_20th_may_2019_we_work_as_per_this_project_to_develop_and_to_test_their_talents_across_a_broadly_based_and_academically_stimulating_curriculum_that_promotes_intellectual_artistic_aesthetic_physical_and_social_development_with_providing_appropriate_opportunities_to_children_with_giving_basic_education_we_work_to_allow_deeper_exploration_of_subjects_of_particular_interest_as_well_as_the_development_of_individual_skills_abilities_capacities_and_talents_with_doing_extra_curriculum_activities_for_children_development">Gyandhara – A way of promoting education is working to prepare children for a world that not only places a high value on educational achievement, but also on artistic flair, social awareness, independence and diversity. We launched this project is dated on 20th May, 2019. We work as per this project, to develop and to test their talents across a broadly based and academically stimulating curriculum that promotes intellectual, artistic, aesthetic, physical and social development with providing appropriate opportunities to children with giving basic education. We work to allow deeper exploration of subjects of particular interest as well as the development of individual skills, abilities, capacities and talents with doing extra curriculum activities for children development.</string>
    <string name="to_create_consciousness_of_the_disease_to_help_people_recognize_the_early_sign_and_symptoms_of_cancer_thus_enabling_them_to_seek_treatment_at_an_early_stage_the_programme_encourages_the_participants_to_seek_prompt_medical_attention_for_symptoms_which_may_include_lumps_sores_bleeding_hoarseness_weight_loss_and_persistent_indigestion_cough_pain_etc_to_teach_people_about_the_key_danger_factors_of_most_cancers_when_you_consider_that_extra_than_30_of_cancer_instances_can_be_averted_by_means_of_editing_lifestyle_or_fending_off_the_important_thing_hazard_factors_to_inform_people_about_the_importance_of_cancer_check_up_at_an_early_stage">> To create consciousness of the disease.\n> To help people recognize the early sign and symptoms of cancer, thus enabling them to seek treatment at an early stage. The programme encourages the participants to seek prompt medical attention for symptoms which may include lumps, sores, bleeding, hoarseness, weight loss and persistent indigestion/cough/pain, etc.\n</string>
    <string name="this_project_named_gyandhara_is_working_to_ensure_that_all_children_have_the_opportunities_to_learn_and_make_progress_as_well_as_to_provide_experience_of_all_forms_of_education_linguistic_technological_mathematical_scientific_social_physical_aesthetical_and_creative_with_providing_the_acquisition_of_skills_in_all_these_areas_our_project_has_main_emphasized_on_promoting_moral_social_spiritual_and_cultural_guidance_through_organizing_various_activities_and_events_like_as_sport_education_day_festival_celebration_social_awareness_programme_providing_basic_education_environment_awareness_programmes_and_so_on"><![CDATA[This project named “Gyandhara” is working to ensure that all children have the opportunities to learn and make progress as well as to provide experience of all forms of education; linguistic, technological, mathematical, scientific, social, physical, aesthetical and creative with providing the acquisition of skills in all these areas. Our project has main emphasized on promoting moral, social, spiritual and cultural guidance through organizing various activities and events like as sport education, day & festival celebration, social awareness programme, providing basic education, environment awareness programmes and so on.]]></string>
    <string name="in_this_project_our_target_is_children_who_are_belonging_from_5_year_to_15_year_age_group_the_primary_graders_are_often_considered_most_important_years_of_a_child_s_school_career_this_project_has_focused_on_to_strive_to_achieve_the_accessibility_of_environmental_and_development_education_linked_to_social_education_from_primary_school_age">In this project our target is children who are belonging from 5 year to 15 year age group. The primary graders are often considered most important years of a child’s school career. This project has focused on to strive to achieve the accessibility of environmental and development education, linked to social education, from primary school age.</string>
    <string name="todo">Todo</string>
</resources>